src/test/ui/traits/solver-cycles/inductive-canonical-cycle.stderr
error[E0275]: overflow evaluating the requirement `_: Sized`
  --> $DIR/inductive-canonical-cycle.rs:26:5
   |
LL |     require_trait::<_, _>();
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`inductive_canonical_cycle`)
note: required for `()` to implement `Trait<_, _>`
  --> $DIR/inductive-canonical-cycle.rs:11:12
   |
LL | impl<T, U> Trait<T, U> for ()
   |            ^^^^^^^^^^^     ^^
   = note: 128 redundant requirements hidden
   = note: required for `()` to implement `Trait<_, _>`
note: required by a bound in `require_trait`
  --> $DIR/inductive-canonical-cycle.rs:22:9
   |
LL | fn require_trait<T, U>()
   |    ------------- required by a bound in this
LL | where
LL |     (): Trait<T, U>
   |         ^^^^^^^^^^^ required by this bound in `require_trait`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
